src/main/gen/antlr/RiddleParser.java
// Generated from C:/Users/wangz/IdeaProjects/riddle-idea/src/main/resources/antlr/RiddleParser.g4 by ANTLR 4.13.2
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class RiddleParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Var=1, Val=2, For=3, While=4, Continue=5, Break=6, If=7, Else=8, Func=9, 
		Return=10, Import=11, Package=12, Class=13, True=14, False=15, Null=16, 
		Try=17, Catch=18, Override=19, Static=20, Const=21, Public=22, Protected=23, 
		Private=24, Virtual=25, Operator=26, Template=27, TypeName=28, Int_=29, 
		Float_=30, Double_=31, Short_=32, Long_=33, Char_=34, LeftBracket=35, 
		RightBracket=36, LeftSquare=37, RightSquare=38, LeftCurly=39, RightCurly=40, 
		Colon=41, Semi=42, Comma=43, Equal=44, Assign=45, Greater=46, Less=47, 
		LeftLeft=48, RightRight=49, RightRightRight=50, Add=51, Sub=52, Star=53, 
		Div=54, Mod=55, Not=56, And=57, Or=58, Xor=59, Dot=60, DoubleQuotes=61, 
		Quotes=62, Endl=63, Identifier=64, Hexadecimal=65, Decimal=66, Octal=67, 
		Binary=68, Float=69, IntegerSequence=70, HEX_DIGIT=71, OCTAL_DIGIT=72, 
		BINARY_DIGIT=73, DIGIT=74, STRING=75, CHAR=76, LINE_COMMENT=77, BLOCK_COMMENT=78, 
		WHITESPACE=79;
	public static final int
		RULE_program = 0, RULE_null_cnt = 1, RULE_statement_ed = 2, RULE_statement = 3, 
		RULE_bodyExpr = 4, RULE_packStatement = 5, RULE_importStatement = 6, RULE_varDefineStatement = 7, 
		RULE_argsExpr = 8, RULE_defineArgs = 9, RULE_funcDefine = 10, RULE_forStatement = 11, 
		RULE_whileStatement = 12, RULE_continueStatement = 13, RULE_breakStatement = 14, 
		RULE_ifStatement = 15, RULE_returnStatement = 16, RULE_classDefine = 17, 
		RULE_tryExpr = 18, RULE_catchExpr = 19, RULE_exprPtr = 20, RULE_exprPtrParser = 21, 
		RULE_expression = 22, RULE_id = 23, RULE_modifier = 24, RULE_modifierList = 25, 
		RULE_number = 26, RULE_boolean = 27, RULE_float = 28, RULE_integer = 29, 
		RULE_tmpleDefine = 30, RULE_tmplDefineArg = 31, RULE_tmplUsed = 32, RULE_tmplArg = 33, 
		RULE_tmplArgList = 34, RULE_typeUsed = 35, RULE_property = 36, RULE_propertyItem = 37;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "null_cnt", "statement_ed", "statement", "bodyExpr", "packStatement", 
			"importStatement", "varDefineStatement", "argsExpr", "defineArgs", "funcDefine", 
			"forStatement", "whileStatement", "continueStatement", "breakStatement", 
			"ifStatement", "returnStatement", "classDefine", "tryExpr", "catchExpr", 
			"exprPtr", "exprPtrParser", "expression", "id", "modifier", "modifierList", 
			"number", "boolean", "float", "integer", "tmpleDefine", "tmplDefineArg", 
			"tmplUsed", "tmplArg", "tmplArgList", "typeUsed", "property", "propertyItem"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'var'", "'val'", "'for'", "'while'", "'continue'", "'break'", 
			"'if'", "'else'", "'fun'", "'return'", "'import'", "'package'", "'class'", 
			"'true'", "'false'", "'null'", "'try'", "'catch'", "'override'", "'static'", 
			"'const'", "'public'", "'protected'", "'private'", "'virtual'", "'operator'", 
			"'template'", "'typename'", "'int'", "'float'", "'double'", "'short'", 
			"'long'", "'char'", "'('", "')'", "'['", "']'", "'{'", "'}'", "':'", 
			"';'", "','", "'=='", "'='", "'>'", "'<'", "'<<'", "'>>'", "'>>>'", "'+'", 
			"'-'", "'*'", "'/'", "'%'", "'!'", "'&'", "'|'", "'^'", "'.'", "'\"'", 
			"'''", "'\\n'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Var", "Val", "For", "While", "Continue", "Break", "If", "Else", 
			"Func", "Return", "Import", "Package", "Class", "True", "False", "Null", 
			"Try", "Catch", "Override", "Static", "Const", "Public", "Protected", 
			"Private", "Virtual", "Operator", "Template", "TypeName", "Int_", "Float_", 
			"Double_", "Short_", "Long_", "Char_", "LeftBracket", "RightBracket", 
			"LeftSquare", "RightSquare", "LeftCurly", "RightCurly", "Colon", "Semi", 
			"Comma", "Equal", "Assign", "Greater", "Less", "LeftLeft", "RightRight", 
			"RightRightRight", "Add", "Sub", "Star", "Div", "Mod", "Not", "And", 
			"Or", "Xor", "Dot", "DoubleQuotes", "Quotes", "Endl", "Identifier", "Hexadecimal", 
			"Decimal", "Octal", "Binary", "Float", "IntegerSequence", "HEX_DIGIT", 
			"OCTAL_DIGIT", "BINARY_DIGIT", "DIGIT", "STRING", "CHAR", "LINE_COMMENT", 
			"BLOCK_COMMENT", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RiddleParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RiddleParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<Statement_edContext> statement_ed() {
			return getRuleContexts(Statement_edContext.class);
		}
		public Statement_edContext statement_ed(int i) {
			return getRuleContext(Statement_edContext.class,i);
		}
		public TerminalNode EOF() { return getToken(RiddleParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RiddleParserListener ) ((RiddleParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RiddleParserListener ) ((RiddleParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RiddleParserVisitor ) return ((RiddleParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			setState(83);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -9135405986765603078L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 6207L) != 0)) {
					{
					{
					setState(76);
					statement_ed();
					}
					}
					setState(81);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Null_cntContext extends ParserRuleContext {
		public TerminalNode Semi() { return getToken(RiddleParser.Semi, 0); }
		public TerminalNode Endl() { return getToken(RiddleParser.Endl, 0); }
		public Null_cntContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_null_cnt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RiddleParserListener ) ((RiddleParserListener)listener).enterNull_cnt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RiddleParserListener ) ((RiddleParserListener)listener).exitNull_cnt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RiddleParserVisitor ) return ((RiddleParserVisitor<? extends T>)visitor).visitNull_cnt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Null_cntContext null_cnt() throws RecognitionException {
		Null_cntContext _localctx = new Null_cntContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_null_cnt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			_la = _input.LA(1);
			if ( !(_la==Semi || _la==Endl) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Statement_edContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TerminalNode Semi() { return getToken(RiddleParser.Semi, 0); }
		public TerminalNode Endl() { return getToken(RiddleParser.Endl, 0); }
		public Statement_edContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement_ed; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RiddleParserListener ) ((RiddleParserListener)listener).enterStatement_ed(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RiddleParserListener ) ((RiddleParserListener)listener).exitStatement_ed(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RiddleParserVisitor ) return ((RiddleParserVisitor<? extends T>)visitor).visitStatement_ed(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Statement_edContext statement_ed() throws RecognitionException {
		Statement_edContext _localctx = new Statement_edContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement_ed);
		try {
			setState(96);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				statement();
				setState(89);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(88);
					match(Semi);
					}
					break;
				}
				setState(92);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(91);
					match(Endl);
					}
					break;
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(94);
				match(Semi);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(95);
				match(Endl);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public PackStatementContext packStatement() {
			return getRuleContext(PackStatementContext.class,0);
		}
		public ImportStatementContext importStatement() {
			return getRuleContext(ImportStatementContext.class,0);
		}
		public ClassDefineContext classDefine() {
			return getRuleContext(ClassDefineContext.class,0);
		}
		public FuncDefineContext funcDefine() {
			return getRuleContext(FuncDefineContext.class,0);
		}
		public VarDefineStatementContext varDefineStatement() {
			return getRuleContext(VarDefineStatementContext.class,0);
		}
		public ForStatementContext forStatement() {
			return getRuleContext(ForStatementContext.class,0);
		}
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public ContinueStatementContext continueStatement() {
			return getRuleContext(ContinueStatementContext.class,0);
		}
		public BreakStatementContext breakStatement() {
			return getRuleContext(BreakStatementContext.class,0);
		}
		public TryExprContext tryExpr() {
			return getRuleContext(TryExprContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public BodyExprContext bodyExpr() {
			return getRuleContext(BodyExprContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RiddleParserListener ) ((RiddleParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RiddleParserListener ) ((RiddleParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RiddleParserVisitor ) return ((RiddleParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_statement);
		try {
			setState(112);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(98);
				packStatement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				importStatement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(100);
				classDefine();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(101);
				funcDefine();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(102);
				varDefineStatement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(103);
				forStatement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(104);
				whileStatement();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(105);
				ifStatement();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(106);
				returnStatement();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(107);
				continueStatement();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(108);
				breakStatement();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(109);
				tryExpr();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(110);
				expression(0);
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(111);
				bodyExpr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BodyExprContext extends ParserRuleContext {
		public TerminalNode LeftCurly() { return getToken(RiddleParser.LeftCurly, 0); }
		public TerminalNode RightCurly() { return getToken(RiddleParser.RightCurly, 0); }
		public List<Statement_edContext> statement_ed() {
			return getRuleContexts(Statement_edContext.class);
		}
		public Statement_edContext statement_ed(int i) {
			return getRuleContext(Statement_edContext.class,i);
		}
		public BodyExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bodyExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RiddleParserListener ) ((RiddleParserListener)listener).enterBodyExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RiddleParserListener ) ((RiddleParserListener)listener).exitBodyExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RiddleParserVisitor ) return ((RiddleParserVisitor<? extends T>)visitor).visitBodyExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyExprContext bodyExpr() throws RecognitionException {
		BodyExprContext _localctx = new BodyExprContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_bodyExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(LeftCurly);
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -9135405986765603078L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 6207L) != 0)) {
				{
				{
				setState(115);
				statement_ed();
				}
				}
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(121);
			match(RightCurly);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PackStatementContext extends ParserRuleContext {
		public IdContext packName;
		public TerminalNode Package() { return getToken(RiddleParser.Package, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public PackStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RiddleParserListener ) ((RiddleParserListener)listener).enterPackStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RiddleParserListener ) ((RiddleParserListener)listener).exitPackStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RiddleParserVisitor ) return ((RiddleParserVisitor<? extends T>)visitor).visitPackStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PackStatementContext packStatement() throws RecognitionException {
		PackStatementContext _localctx = new PackStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_packStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(Package);
			setState(124);
			((PackStatementContext)_localctx).packName = id();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStatementContext extends ParserRuleContext {
		public IdContext libName;
		public TerminalNode Import() { return getToken(RiddleParser.Import, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public ImportStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RiddleParserListener ) ((RiddleParserListener)listener).enterImportStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RiddleParserListener ) ((RiddleParserListener)listener).exitImportStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RiddleParserVisitor ) return ((RiddleParserVisitor<? extends T>)visitor).visitImportStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStatementContext importStatement() throws RecognitionException {
		ImportStatementContext _localctx = new ImportStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_importStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(Import);
			setState(127);
			((ImportStatementContext)_localctx).libName = id();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarDefineStatementContext extends ParserRuleContext {
		public IdContext name;
		public TypeUsedContext type;
		public ExpressionContext value;
		public TerminalNode Var() { return getToken(RiddleParser.Var, 0); }
		public TerminalNode Colon() { return getToken(RiddleParser.Colon, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TypeUsedContext typeUsed() {
			return getRuleContext(TypeUsedContext.class,0);
		}
		public TerminalNode Assign() { return getToken(RiddleParser.Assign, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public VarDefineStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDefineStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RiddleParserListener ) ((RiddleParserListener)listener).enterVarDefineStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RiddleParserListener ) ((RiddleParserListener)listener).exitVarDefineStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RiddleParserVisitor ) return ((RiddleParserVisitor<? extends T>)visitor).visitVarDefineStatement(this);
			else return visitor.visitChildren(this);
		}
	}
